--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "keywords": [],
     "dependencies": {
         "@vasanthdeveloper/utilities": "^0.0.4",
+        "commafy-anything": "^2.0.0",
         "twitter-api-client": "^1.2.0"
     },
     "devDependencies": {
